Feat: Error return revamp
